# SenseMap

./: .clang-format  .gitignore  CMakeLists.txt  Changelog  Dataset.md  Dockerfile  README.md  config_1  example.md
exe/mvs/: CMakeLists.txt  test_fusion.cc  test_integration.cc  test_lidar_fusion.cc  test_meshing.cc  test_patch_match.cc  test_semantic.cc  test_texture_mapping.cc  test_undistortion.cc
exe/mvs_tools/: CMakeLists.txt  color_harmonization.cc  test_cadmap_to_linemap.cc  test_change_detection.cc  test_dense_convert_panorama.cc  test_dense_map_update.cc  test_dense_to_cadmap.cc  test_dense_to_heatmap.cc  test_dom_generation.cc  test_epsg4547_trans.cc  test_geojson_converter.cc  test_ground_area.cc  test_lidar_convert.cc  test_lidar_init.cc  test_lidar_to_img.cc  test_mask_filter.cc  test_mask_plane.cc  test_merge_dense.cc  test_merge_reconstruction.cc  test_mesh_cluster.cc  test_mesh_tile.cc  test_obj2dae.cc  test_obj2ply.cc  test_output_pointcloud.cc  test_pcd.cc  test_plane_generation.cc  test_ply2las.cc  test_ply2pnts.cc  test_point_cloud_cluster.cc  test_point_cloud_filter.cc  test_point_cloud_improve.cc  test_point_cloud_simplify.cc  test_reconstruction_cluster.cc  test_rgbd_converter.cc  test_simplify.cc  test_transformation.cc  test_undistort_fisheye.cc  test_utm_converter.cc
exe/sfm/: CMakeLists.txt  analysis.cc  cluster_mapper_test.cc  incremental_mapper_test.cc  test_all.cc  test_all_configure_hybrid.cc  test_all_configure_hybrid_new.cc  test_all_configure_outside.cc  test_dataset.cc  test_feature.cc  test_feature_extraction.cc  test_feature_match.cc  test_global_mapper.cc  test_graph.cc  test_mapping.cc  test_matching.cc  test_merge_clusters.cc  test_pre_mapping.cc  test_retrieval.cc  threading_test.cc
exe/sfm_tools/: CMakeLists.txt  align_merge_reconstruction.cc  align_reconstruction.cc  convert_to_kitti.cc  convert_to_tum.cc  convert_to_tum2.cc  create_vlad_code_book.cc  feature_projection_matrix_training.cc  generate_binary_descriptor_pattern.cc  panorama_folder.cc  partition_model_by_floor.cc  rgbd_bin_packer_dior.cc  rgbd_bin_packer_hybrid.cc  rgbd_bin_packer_universal.cc  test_AR_car.cc  test_align_reconstruction_with_rtk.cc  test_apriltag.cc  test_bound_box_filter.cc  test_camera_info.cc  test_concatenate_trans.cc  test_convert_export_config.cc  test_convert_model.cc  test_convert_perspective_to_panorama.cc  test_convert_pose.cc  test_convert_rig.cc  test_create_loc_benchmark.cc  test_delete_images.cc  test_export_calibs.cc  test_export_normal_reconstruction.cc  test_extract_apriltag.cc  test_feature_apriltag.cc  test_filter.cc  test_filter_scene_graph.cc  test_free_gba.cc  test_generate_normal_images.cc  test_gps_alignment.cc  test_gps_bound_box.cc  test_gps_trans_txt_to_yaml.cc  test_gps_transform.cc  test_loop_closure.cc  (+29 more)
src/: CMakeLists.txt
src/RGBDAlign/: CMakeLists.txt  FeatureAlign.cpp  FeatureAlign.h  ICPLink.h  PointCloudAlign.cpp  PointCloudAlign.h  RGBDAlignUtility.cpp  RGBDAlignUtility.h  RGBDPyramid.cpp  RGBDPyramid.h  RGBDRegistration.cpp  RGBDRegistration.h
src/base/: CMakeLists.txt  camera.cc  camera.h  camera_database.cc  camera_database.h  camera_models.cc  camera_models.h  common.h  cost_functions.h  essential_matrix.cc  essential_matrix.h  homography_matrix.cc  homography_matrix.h  image.cc  image.h  image_reader.cc  image_reader.h  mappoint.cc  mappoint.h  matrix.h  point2d.cc  point2d.h  polynomial.cc  polynomial.h  pose.cc  pose.h  projection.cc  projection.h  reconstruction.cc  reconstruction.h  reconstruction_manager.cc  reconstruction_manager.h  similarity_transform.cc  similarity_transform.h  track.cc  track.h  triangulation.cc  triangulation.h  undistortion.cc  undistortion.h  (+3 more)
src/cluster/: CMakeLists.txt  community_tree.h  fast_community.cc  fast_community.h  maxheap.cc  maxheap.h  vektor.cc  vektor.h
src/container/: CMakeLists.txt  feature_data_container.cc  feature_data_container.h  io.cc  io.h  match_data_container.cc  match_data_container.h  scene_graph_container.cc  scene_graph_container.h
src/controllers/: CMakeLists.txt  cluster_mapper_controller.cc  cluster_mapper_controller.h  directed_mapper_controller.cc  directed_mapper_controller.h  global_mapper_controller.cc  global_mapper_controller.h  hybrid_mapper_controller.cc  hybrid_mapper_controller.h  incremental_mapper_controller.cc  incremental_mapper_controller.h  mapper_controller.cc  mapper_controller.h  mapper_options.cc  mapper_options.h  patch_match_controller.cc  patch_match_controller.h  patch_match_options.cc  patch_match_options.h
src/dom/: CMakeLists.txt  FullGCHelper.cc  FullGCHelper.h  poisson_blending.cc  poisson_blending.h  sparse_table.h  tdom.cc  tdom.h  utm_zone.imp
src/estimators/: CMakeLists.txt  absolute_pose.cc  absolute_pose.h  affine_transform.cc  affine_transform.h  camera_alignment.cc  camera_alignment.h  essential_matrix.cc  essential_matrix.h  essential_matrix_coeffs.h  essential_matrix_poly.h  fundamental_matrix.cc  fundamental_matrix.h  generalized_absolute_pose.cc  generalized_absolute_pose.h  generalized_absolute_pose_coeffs.cc  generalized_absolute_pose_coeffs.h  generalized_relative_pose.cc  generalized_relative_pose.h  homography_matrix.cc  homography_matrix.h  mappoint_alignment.cc  mappoint_alignment.h  optimization_functor.h  plane.cc  plane.h  plane_estimator.cc  plane_estimator.h  reconstruction_aligner.cc  reconstruction_aligner.h  relative_pose.cc  relative_pose.h  scale_gravity.cc  scale_gravity.h  scale_selection.cc  scale_selection.h  similarity_transform.h  translation_transform.h  triangulation.cc  triangulation.h  (+4 more)
src/feature/: CMakeLists.txt  extraction.cc  extraction.h  feature_matcher.cc  feature_matcher.h  global_feature_extraction.cc  global_feature_extraction.h  matching_utils.cc  matching_utils.h  sift.cc  sift.h  types.cc  types.h  utils.cc  utils.h
src/graph/: CMakeLists.txt  connected_components.h  correspondence_graph.cc  correspondence_graph.h  graph_cut.cc  graph_cut.h  maximum_spanning_tree_graph.cc  maximum_spanning_tree_graph.h  minimum_spanning_tree.h  scene_clustering.cc  utils.h  (+1 more)
(+300 files in other folders)
